<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.dev.fretex.MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:src="@drawable/logo_fretex" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView4"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="36dp"
        android:background="#f0eeee"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="11dp"
        android:background="#f0eeee"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="5dp" />

    <Button
        android:id="@+id/botao_entrar_id"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_above="@+id/texto_cadastrar_id"
        android:layout_alignStart="@+id/texto_cadastrar_id"
        android:background="@drawable/botao_entrar"
        android:text="@string/botao_entrar"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/senha_perdida"
        android:textColor="#f37a24" />

    <TextView
        android:id="@+id/texto_cadastrar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/cadastrar_novo_usuario"
        android:textColor="#f37a24"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="11dp"
        android:text="@string/texto_email" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_below="@+id/editText4"
        android:text="@string/texto_senha" />

</RelativeLayout>
